--- a/sales.html
+++ b/sales.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Покупка, продажа и демонтаж б/у труб в Центральном и Северо-Западной регионах">
+    <meta name="description" content="Широкий выбор труб любых диаметров, новый, б/у, в наличии и под заказ">
     <meta name="author" content="">
-    <title>Труба б/у в Центральном и СЗ регионах</title>
+    <title>Труба б/у – Ассортимент</title>
 
-	<!-- core CSS -->
+    <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -25,7 +26,7 @@
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
 
-<body class="homepage">
+<body>
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -66,7 +67,7 @@
               <div class="row">
                   <div class="col-sm-6 col-xs-12 col-md-6">
                       <div class="top-number">
-                        <p><i class="fa fa-phone-square"></i> +7(4852) 68-20-41, +7(4852) 68-20-51</p>
+                        <p><i class="fa fa-phone-square"></i> +7(4852) 68-20-51, +7(4852) 68-20-41</p>
                       </div>
                   </div>
                   <div class="col-sm-6 col-xs-12 col-md-6">
@@ -79,47 +80,79 @@
       </div><!--/.top-bar-->
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-
-                <div class="collapse navbar-collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Главная</a></li>
-                        <li class="active"><a href="about.html">О компании</a></li>
-                        <li><a href="sales.html">Спецпредложения</a></li>
-                        <li><a href="prices.html">Ассортимент</a></li>
-                        <li><a href="contact-us.html">Контакты</a></li>
-                    </ul>
-                </div>
+              <div class="collapse navbar-collapse navbar-right">
+                  <ul class="nav navbar-nav">
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="about.html">О компании</a></li>
+                    <li class="active"><a href="sales.html">Спецпредложения</a></li>
+                    <li><a href="prices.html">Ассортимент</a></li>
+                    <li><a href="contact-us.html">Контакты</a></li>
+                  </ul>
+              </div>
             </div><!--/.container-->
         </nav><!--/nav-->
 
     </header><!--/header-->
 
-    <section id="main-slider" class="no-margin">
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="item active" style="background-image: url(images/tubes.jpg)">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6 float-right">
-                                <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
-                                    <h2 class="animation animated-item-2 normal-text">Наша компания продает, покупает и демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
-                                </div>
+    <section id="feature" class="transparent-bg">
+        <div class="container">
+           <div class="center">
+                <h2>Ассортимент и цены</h2>
+                <p class="lead">Оптовые поставки обсуждаются отдельно.</p>
+                <!--
+                <p class="lead"><a class="btn-primary" href="assets/prices.xlsx">Скачать прайс-лист</a></p>
+              -->
+            </div>
+
+            <div class="pricing-area text-center">
+              <div class="plan price-one">
+                <table class="table">
+                  <tr class="heading-one">
+                    <td><h3><span>Диаметр, мм</span></h3></td>
+                    <td><h3><span>Стенка, мм</span></h3></td>
+                    <td><h3><span>Розничная цена за тонну, руб</span></h3></td>
+                    <td><h3><span>Примечание</span></h3></td>
+                    <td><h3><span>Фото</span></h3></td>
+                  </tr>
+                  <tr>
+                    <td>73</td>
+                      <td>5,5</td>
+                    <td>23 000</td>
+                    <td>Некондиция</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
+                    </td>
+                  </tr>
+                  <!-- Копировать отсюда -->
+                  <tr>
+                    <td>159</td>
+                    <td>5</td>
+                    <td>27 000</td>
+                    <td>б/у</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/159.jpg" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/159.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
                             </div>
                         </div>
-                    </div>
-                </div><!--/.item-->
-            </div><!--/.carousel-inner-->
-        </div><!--/.carousel-->
-    </section><!--/#main-slider-->
+                    </td>
+                  </tr>
+                  <!-- Копировать досюда -->
+                </table>
+              </div>
+            </div>
+
+            <!-- <div class="get-started center wow fadeInDown">
+                <h2>Ready to get started</h2>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore  magna aliqua. <br>  Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            </div> -->
+            <!--/.get-started-->
+
+        </div><!--/.container-->
+    </section><!--/#feature-->
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
@@ -139,6 +172,7 @@
             </div>
         </div>
     </footer><!--/#footer-->
+
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
