--- a/404.html
+++ b/404.html
@@ -80,6 +80,7 @@
                     <ul class="nav navbar-nav">
                       <li><a href="index.html">Главная</a></li>
                       <li><a href="about.html">О компании</a></li>
+                      <li><a href="sales.html">Спецпредложения</a></li>
                       <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
@@ -105,6 +106,7 @@
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
                       <li><a href="about.html">О компании</a></li>
+                      <li><a href="sales.html">Спецпредложения</a></li>
                       <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
