--- a/contact-us.html
+++ b/contact-us.html
@@ -84,6 +84,7 @@
                 <ul class="nav navbar-nav">
                   <li><a href="index.html">Главная</a></li>
                   <li><a href="about.html">О компании</a></li>
+                  <li><a href="sales.html">Спецпредложения</a></li>
                   <li><a href="prices.html">Ассортимент</a></li>
                   <li class="active"><a href="contact-us.html">Контакты</a></li>
                 </ul>
@@ -171,6 +172,7 @@
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
                       <li><a href="about.html">О компании</a></li>
+                      <li><a href="sales.html">Спецпредложения</a></li>
                       <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
