--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Главная</a></li>
                         <li><a href="about.html">О компании</a></li>
+                        <li><a href="sales.html">Спецпредложения</a></li>
                         <li><a href="prices.html">Ассортимент</a></li>
                         <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
@@ -111,7 +112,7 @@
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
                                     <h2 class="animation animated-item-2">Наша компания продает, покупает и демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
-                                    <a class="btn-slide animation animated-item-3" href="prices.html">Смотреть ассортимент</a>
+                                    <a class="btn-slide animation animated-item-3" href="sales.html">Спецпредложения</a>
                                 </div>
                             </div>
                         </div>
@@ -221,6 +222,7 @@
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
                       <li><a href="about.html">О компании</a></li>
+                      <li><a href="sales.html">Спецпредложения</a></li>
                       <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
