--- a/prices.html
+++ b/prices.html
@@ -84,6 +84,7 @@
                   <ul class="nav navbar-nav">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about.html">О компании</a></li>
+                    <li><a href="sales.html">Спецпредложения</a></li>
                     <li class="active"><a href="prices.html">Ассортимент</a></li>
                     <li><a href="contact-us.html">Контакты</a></li>
                   </ul>
@@ -351,6 +352,7 @@
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
                       <li><a href="about.html">О компании</a></li>
+                      <li><a href="sales.html">Спецпредложения</a></li>
                       <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
