--- a/contact-us.html
+++ b/contact-us.html
@@ -112,7 +112,7 @@
                               <h5>+7(4852) 68-20-41</h5>
                               <h5>+7(4852) 68-20-41</h5>
                               <h5 style="margin-top: 10px">Адрес</h5>
-                              <h5>г. Ярославль, ул. Гагарина, д. 62</h5>
+                              <h5>г. Ярославль, ул. Ганчарова, д. 30</h5>
                               <h3>Адреса складов</h3>
                               <h5>г. Ярославль, ул. Гагарина, д. 62</h5>
                               <h5>г. Ярославль, Тормозное шоссе, д. 119</h5>
