--- a/contact-us.html
+++ b/contact-us.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-sm-6 col-xs-12 col-md-6">
                     <div class="social top-number">
-                      <p><i class="fa"></i>г. Ярославль, ул. Гагарина, д. 62</p>
+                      <p><i class="fa"></i>г. Ярославль, ул. Ганчарова, д. 30</p>
                     </div>
                 </div>
             </div>
