--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   </div>
                   <div class="col-sm-6 col-xs-12 col-md-6">
                       <div class="social top-number">
-                        <p><i class="fa"></i>г. Ярославль, ул. Гагарина, д. 62</p>
+                        <p><i class="fa"></i>г. Ярославль, ул. Ганчарава, д. 30</p>
                       </div>
                   </div>
               </div>
@@ -132,7 +132,7 @@
                  использования новых труб в пользу б/у. Значительная часть б/у
 		       труб <b><i>ничем не уступает новым</i></b>, но стоит заметно дешевле.
                  Конечно, не для всех видов работ подходит б/у труба, но
-                 правильно подобранная замена от хорошего поставщика во многих
+                 правильно подобранная замена от хорошего поставщика 
                  случаях способна сильно снизить ваши затраты.</h3>
            </div>
         </div>
@@ -189,8 +189,8 @@
                         <div class="feature-wrap">
                             <i class="fa fa-rub"></i>
                             <h2>Низкие цены</h2>
-                            <h3>Мы постоянно работаем над тем, чтобы удерживать
-                              цена низкими без ущерба для качества продукции.
+                            <h3>Мы держим
+                              низкими без ущерба для качества продукции.
                               Актуальную информацию о ценах вы всегда можете посмотреть
                               на соответствующем разделе нашего сайта или утонить
                               по телефону.</h3>
@@ -201,9 +201,9 @@
                         <div class="feature-wrap">
                             <i class="fa fa-truck"></i>
                             <h2>Дополнительные услуги</h2>
-                            <h3>Мы только продаем и покупаем б/у трубы, но
-                            и охотно поможем с демонтажом и доставкой.
-                            Для этого у нас есть свой штат техники и
+                            <h3>Мы не только продаем и покупаем б/у трубы.
+                              Поможем с демонтировать и доставить.
+                            Для этого у нас есть штат техники и
                             высоквалицифированные специалисты.</h3>
                         </div>
                     </div><!--/.col-md-4-->
