--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   </div>
                   <div class="col-sm-6 col-xs-12 col-md-6">
                       <div class="social top-number">
-                        <p><i class="fa"></i>г. Ярославль, ул. Ганчарава, д. 30</p>
+                        <p><i class="fa"></i>г. Ярославль, ул. Ганчарова, д. 30</p>
                       </div>
                   </div>
               </div>
