--- a/prices.html
+++ b/prices.html
@@ -219,10 +219,10 @@
                     <td>27 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/426.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/426х9.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/426.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/small/426х9.jpg" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
