--- a/about.html
+++ b/about.html
@@ -111,7 +111,16 @@
                             <div class="col-sm-6 float-right">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
-                                    <h2 class="animation animated-item-2 normal-text">Наша компания продает, покупает и демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
+                                    <h2 class="animation animated-item-2 normal-text">Ярославская Трубная Компания активно работает на рынке трубного металлопроката более 10 лет.
+Мы одна из первых компания в городе Ярославле, имеющая большой ассортимент стальных труб. На наших складах
+постоянно находится более ста тонн трубного металлопроката.
+Количество и качество продукции постоянно расширяется — и это одно из приоритетных направлений стратегии нашей компании.
+Нашими постоянными клиентами являются компании, работающие в различных отраслях: строительные организации,
+организации машиностроительного комплекса, производители различного оборудования.
+Профессионализм сотрудников, увлеченность, ответственность, продуманность действий,
+стремление предлагать Вам лучшие решения для Ваших задач — это то, что характеризует компанию "ЯТК"
+как достойного партнёра, способного удовлетворить потребности самого требовательного клиента.
+</h2>
                                 </div>
                             </div>
                         </div>
