--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                         <div class="row">
                             <div class="col-sm-6 float-right">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
+                                    <h1 class="animation animated-item-1">О нас</h1>
                                     <h2 class="animation animated-item-2 normal-text">Ярославская Трубная Компания активно работает на рынке трубного металлопроката более 10 лет.
 Мы одна из первых компания в городе Ярославле, имеющая большой ассортимент стальных труб. На наших складах
 постоянно находится более ста тонн трубного металлопроката.
