--- a/prices.html
+++ b/prices.html
@@ -296,6 +296,22 @@
                     </td>
                   </tr>
                   <tr>
+                    <td>1220</td>
+                    <td>9-20</td>
+                    <td>24 000</td>
+                    <td>б/у</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/1020.jpg" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/1020.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
                     <td>1420</td>
                     <td>12-36</td>
                     <td>23 000</td>
