--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <div class="col-sm-6 float-right">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
-                                    <h2 class="animation animated-item-2">Наша компания продает, покупает и демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
+                                    <h2 class="animation animated-item-2">Компания ЯТК продает, покупает,демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
                                     <a class="btn-slide animation animated-item-3" href="sales.html">Спецпредложения</a>
                                 </div>
                             </div>
@@ -130,7 +130,7 @@
                  до исчерпания ресурса использования. Благодаря этому многие
                  потребители могут существенно сэкономить, отказывшись от
                  использования новых труб в пользу б/у. Значительная часть б/у
-		       труб <b><i>ничем не уступает новым</i></b>, но стоит заметно дешевле.
+		       труб ничем не уступает новым, но стоит заметно дешевле.
                  Конечно, не для всех видов работ подходит б/у труба, но
                  правильно подобранная замена от хорошего поставщика 
                  случаях способна сильно снизить ваши затраты.</h3>
