--- a/prices.html
+++ b/prices.html
@@ -162,7 +162,7 @@
                     <td>25 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/273.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/273.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
                                 <a class="preview" href="images/photos/full/273.jpg" rel="prettyPhoto">
@@ -178,10 +178,10 @@
                     <td>28 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/325.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/326.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/full/325.jpg" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
@@ -194,10 +194,10 @@
                     <td>27 500</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/325.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/326.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/full/325.jpg" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
@@ -219,10 +219,10 @@
                     <td>29 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/426х9.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/426.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/small/426х9.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/small/426.jpg" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
@@ -235,10 +235,10 @@
                     <td>24 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/630.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/530.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/630.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/full/530.jpg" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
@@ -251,7 +251,10 @@
                     <td>28 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/nopic.jpg" alt="">
+                       <img class="img-responsive" src="images/photos/full/630.jpg" alt="">
+                        <div class="overlay">
+                          <a class="preview" href="images/photos/full/630.jpg" rel="prettyPhoto">
+                           <i class="fa fa-eye"></i>    
                     </td>
                   </tr>
                   <tr>
@@ -276,7 +279,10 @@
                     <td>24 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/820.jpg" alt="">
+                         <i class="fa fa-eye"></i>
+                        <a class="preview" href="images/photos/full/820.jpg" rel="prettyPhoto">
+                            <i class="fa fa-eye"></i>
                     </td>
                   </tr>
                   <tr>
@@ -285,7 +291,7 @@
                     <td>25 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/1020.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/1020.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
                                 <a class="preview" href="images/photos/full/1020.jpg" rel="prettyPhoto">
@@ -301,10 +307,10 @@
                     <td>24 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/1020.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/1220.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/1020.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/full/1220.jpg" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
@@ -317,10 +323,10 @@
                     <td>23 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/1220.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/1420.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/1220.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/full/1420.jpg" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
