--- a/prices.html
+++ b/prices.html
@@ -253,8 +253,12 @@
                     <td class="recent-work-wrap">
                        <img class="img-responsive" src="images/photos/full/630.jpg" alt="">
                         <div class="overlay">
-                          <a class="preview" href="images/photos/full/630.jpg" rel="prettyPhoto">
-                           <i class="fa fa-eye"></i>    
+                          <div class="recent-work-inner">
+                             <a class="preview" href="images/photos/full/630.jpg" rel="prettyPhoto">
+                               <i class="fa fa-eye"></i> 
+                             </a>
+                          </div>
+                       </div>
                     </td>
                   </tr>
                   <tr>
@@ -279,11 +283,14 @@
                     <td>24 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/820.jpg" alt="">
-                         <i class="fa fa-eye"></i>
-                         <a class="preview" href="images/photos/full/820.jpg" rel="prettyPhoto">
-                           <i class="fa fa-eye"></i>
-                         <a>
+                        <img class="img-responsive" src="images/photos/full/820.jpg" alt="">
+                        <div class="overlay">
+                           <div class="recent-work-inner">
+                               <a class="preview" href="images/photos/full/820.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                               </a>
+                         </div>
+                       </div>
                     </td>
                   </tr>
                   <tr>
