--- a/prices.html
+++ b/prices.html
@@ -315,7 +315,7 @@
                     <td>24 000</td>
                     <td>б/у</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/full/1220.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/full/1220.JPG" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
                                 <a class="preview" href="images/photos/full/1220.jpg" rel="prettyPhoto">
