--- a/prices.html
+++ b/prices.html
@@ -318,7 +318,7 @@
                         <img class="img-responsive" src="images/photos/full/1220.JPG" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/1220.jpg" rel="prettyPhoto">
+                                <a class="preview" href="images/photos/full/1220.JPG" rel="prettyPhoto">
                                   <i class="fa fa-eye"></i>
                                 </a>
                             </div>
